--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     访问 GitHub 仓库
                 </md-filled-button>
             </a>
-            <a href="https://github.com/panda44312/gener/releases" target="_blank">
+            <a href="https://github.com/panda44312/gener/releases/download/dev/win-unpacked.zip" target="_blank">
                 <md-filled-button>
                     <md-icon slot="icon">
                         download
